# jsonfmt

./: .gitignore  LICENSE  README.md  README_CN.md  example.json  generator.py  jsonfmt.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py  test_input.json
.github/workflows/: python-package.yml  python-publish.yml
jsonfmt/: diff.py  jsonfmt.py  utils.py  x2d.py  xml2.py  xml2py.py
test/: another.json  example.json  example.toml  example.xml  example.yaml  list_a.json  list_b.json  test.py  test_diff.py  test_jsonfmt.py  test_utils.py  test_xml2py.py  todo1.json  todo2.json  todo3.toml
