[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonfmt"
dynamic = ["version"]
requires-python = ">=3.8"
license = {text = "MIT License"}
description = "A simple tool for formatting JSON object."
readme = "README.md"
keywords = ["json", "formatter", "pretty-print", "highlight", "jsonpath"]
authors = [{name = "Seamile", email = "lanhuermao@gmail.com"}]
dependencies = [
    "Pygments >= 2.13.0",
    "pyyaml >= 6.0",
    "toml >= 0.10.2"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: File Formats :: JSON",
    "Topic :: Printing",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://github.com/seamile/jsonfmt"
repository = "https://github.com/seamile/jsonfmt"
documentation = "https://seamile.github.io/jsonfmt/"

[tool.setuptools.dynamic]
version = {attr = "jsonfmt.__version__" }

[project.scripts]
jsonfmt = "jsonfmt:main"
