[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonfmt"
dynamic = ["version"]
requires-python = ">=3.7"
license = { text = "MIT License" }
description = "A powerful tool for pretty-printing, querying and conversion JSON documents."
readme = "README.md"
keywords = ["json", "formatter", "pretty-print", "highlight", "jmespath"]
authors = [{ name = "Seamile", email = "lanhuermao@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: File Formats :: JSON",
    "Topic :: Printing",
    "Topic :: Utilities",
]
dependencies = [
    "jmespath >= 1.0.1",
    "jsonpath-ng >= 1.7.0",
    "Pygments >= 2.17.2",
    "pyperclip >= 1.9.0",
    "pyyaml >= 6.0.1",
    "toml >= 0.10.2",
]

[dependency-groups]
dev = [
    "coverage",
    "iniconfig",
    "mypy",
    "mypy-extensions",
    "packaging",
    "pytest",
    "types-docutils",
    "types-jmespath",
    "types-pygments",
    "types-pyyaml",
    "types-setuptools",
    "types-toml",
    "typing_extensions",
]

[project.urls]
homepage = "https://github.com/seamile/jsonfmt"
repository = "https://github.com/seamile/jsonfmt"
documentation = "https://seamile.github.io/jsonfmt/"

[project.scripts]
jf = "jsonfmt.jsonfmt:main"

[tool.setuptools]
packages = ["jsonfmt"]

[tool.setuptools.dynamic]
version = { attr = "jsonfmt.__version__" }
